[tool.poetry]
name = "train"
version = "0.1.0"
description = ""
authors = ["Yasuaki Uechi <y@uechi.io>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.3"
matplotlib = "^3.2.1"
keras = "^2.3.1"
tensorflow = "<2"
dlib = "^19.19.0"
scikit-learn = "^0.22.2"
imutils = "^0.5.3"
seaborn = "^0.10.0"
opencv-python = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
